--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ date_format: "ordinal"
 title: Coding World
 subtitle: "Coding changes the world"
 description: "Liu Ke's Blog"
-keywords: Liu Ke, 
+keywords: Liu, Ke 
 favicon: /favicon.ico
 timezone: Asia/China
 encoding: "utf-8"
